#96 addressing major issues reported by sonar cube